<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/numero_1"
        android:textColor="#263238"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tittle2"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/numero_2"
        android:textColor="#263238"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="#0288D1"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.210"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextSizeCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:background="#0288D1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.360"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextSizeCheck,TouchTargetSizeCheck"
       />

    <Button
        android:id="@+id/btn_suma"
        android:layout_width="348dp"
        android:layout_height="64dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFCA28"
        android:text="@string/suma"
        android:textColor="#263238"
        android:textSize="25sp"
        app:cornerRadius="00dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474"
        tools:ignore="VisualLintButtonSize"
        />

    <Button
        android:id="@+id/btn_resta"
        android:layout_width="348dp"
        android:layout_height="64dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFCA28"
        android:text="@string/resta"
        android:textColor="#263238"
        android:textSize="25sp"
       app:cornerRadius="00dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_division"
        android:layout_width="348dp"
        android:layout_height="64dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFCA28"
        android:text="@string/division"
        android:textColor="#263238"
        android:textSize="25sp"
        app:cornerRadius="00dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_multiplicacion"
        android:layout_width="348dp"
        android:layout_height="64dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFCA28"
        android:text="@string/multiplicacion"
        android:textColor="#263238"
        android:textSize="25sp"
        app:cornerRadius="00dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774"
        tools:ignore="VisualLintButtonSize" />




</androidx.constraintlayout.widget.ConstraintLayout>