<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/tittle2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/resultado"
        android:textColor="#263238"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/valor1"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:background="#FFCA28"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#263238"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.643"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <TextView
        android:id="@+id/valor2"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:background="#FFCA28"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#263238"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.643"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <TextView
        android:id="@+id/resultado_calculado"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:background="#FFCA28"
        android:text="0"
        android:textAlignment="center"

        android:textColor="#263238"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <TextView
        android:id="@+id/tittlevalor1"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:text="@string/numero_1"
        android:textColor="#263238"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/valor"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:text="@string/numero_2"
        android:textColor="#263238"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/operacion"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/operacion"
        android:textColor="#263238"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="348dp"
        android:layout_height="64dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFCA28"
        android:text="@string/regresar"
        android:textColor="#263238"
        android:textSize="25sp"
        app:cornerRadius="00dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732"
        tools:ignore="VisualLintButtonSize" />



    <Button
        android:id="@+id/btn_salir"
        android:layout_width="348dp"
        android:layout_height="64dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFCA28"
        android:text="@string/salir"
        android:textColor="#263238"
        android:textSize="25sp"
        app:cornerRadius="00dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.827"
        tools:ignore="VisualLintButtonSize"
       />


</androidx.constraintlayout.widget.ConstraintLayout>